bzr-svn 0.4.9	UNRELEASED

  BUGS
  
   * Fix compatibility with bzr 1.3.


bzr-svn 0.4.8	UNRELEASED

  BUGS

   * Fix path to URL conversion for Windows NT. (#188233)

   * Be a bit quieter with messages about experimental mappings. (#162496)

   * Allow specifying path inside repository in svn-branching-scheme. (#190331)

   * Don't provide find_repository() implementation. (#193814)

  FEATURES

   * Add -d option to the svn-push command. 

  INTERNALS

   * Allow multiple mappings to be available at the same time.

bzr-svn 0.4.7	2008-02-01
 
  FEATURES

   * Implement Repository.find_branches(). (#178108)

   * Warn about location when initializing Subversion repository cache.

   * Set revision properties when possible.

  BUGS

   * Fix opening unicode file names during fetch. (#162368)

   * Consistently handle unicode characters. (#129334, #164381)

   * Handle unicode strings appropriately when reading working tree 
     inventory. (#183853)

   * Fix too strict indexing in old existing cache databases. (#165136)

   * Handle children of replaced directories, themselve replaced correctly. (#181790)

   * Handle corner cases tracking branches. (#184457)

   * Avoid errors about invalid branching paths unless the branching scheme 
     was specified explicitly.

   * Change default format to rich-root-pack. (#187008)

   * Fix handling of weird file change after replacing from other branch.
     (#186876)

bzr-svn 0.4.6	2008-01-08

  PERFORMANCE
  
   * Remember where revids have already been detected. Makes incremental
     push a lot faster, in particular in Subversion repositories 
     with a lot of branches. (#139364)

   * Work around memory leak in the Python Subversion bindings of svn.ra.get_log(). 

  FEATURES

   * Support retrieving credentials from Bazaar rather than relying on Subversions' cache. (#120768)

  INTERNALS
  
   * Added pydoctor configuration file.

  BUG FIXES

   * Fix compatibility with Bazaar 1.1.
